--- a/MRPApp/MRPApp/App.config
+++ b/MRPApp/MRPApp/App.config
@@ -8,6 +8,7 @@
 	<!--appSettings의 위치가 중요, 맨 앞에 넣었을때는 오류가 났었음 MainWindow의 cs 코드 파일과 연동됨-->
 	<appSettings>
 		<add key="PlantCode" value="PC010002"/>
+		<add key="FacilityID" value="FAC10002"/>
 		<add key="Test" value="TESTVALUE"/>
 	</appSettings>
 	<startup>
